# streamlit-initial

./: .gitignore  Linda.csv  main.py  pyproject.toml
.streamlit/: config.toml
